update categories - admin panel

--- a/public/css/panel/main.less
+++ b/public/css/panel/main.less
@@ -281,3 +281,13 @@ section.content {
     color: @color-asphalt;
   }
 }
+
+ul.costume-list {
+  > li {
+    margin-right: 7px;
+    margin-bottom: 10px;
+    > a.btn {
+      padding: 1px 15px;
+    }
+  }
+}
