--- a/public/css/panel/main.css
+++ b/public/css/panel/main.css
@@ -268,3 +268,10 @@ section.content {
   font-weight: 700;
   color: #34495e;
 }
+ul.costume-list > li {
+  margin-right: 7px;
+  margin-bottom: 10px;
+}
+ul.costume-list > li > a.btn {
+  padding: 1px 15px;
+}
