--- a/public/css/panel/form.less
+++ b/public/css/panel/form.less
@@ -23,7 +23,7 @@
         }
       }
     }
-     .tab-content {
+    .tab-content {
       padding: 10px 20px;
       .tab-pane {
         width: 100%;
@@ -63,4 +63,36 @@
     margin-bottom: 40px;
     border-radius: 0;
   }
+}
+
+section#filters_area {
+  > .card {
+    margin-bottom: 10px;
+    >.card-header{
+      position: relative;
+      >a.remove-filter{
+        position: absolute;
+        right: 10px;
+        top:5px;
+      }
+    }
+  }
+}
+
+.filter-item-wrapper {
+  width: 100%;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #dddddd;
+  padding-bottom: 10px;
+  > .row {
+    margin-bottom: 10px;
+  }
+}
+.single-input{
+  margin-top: 10px;
+  border: 1px solid @color-silver;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 0;
+  margin-left: 0;
 }
