--- a/public/css/panel/form.css
+++ b/public/css/panel/form.css
@@ -73,11 +73,56 @@ section#filters_area > .card > .card-header > a.remove-filter {
 .filter-item-wrapper > .row {
   margin-bottom: 10px;
 }
-.single-input {
+.filter-inputs {
   margin-top: 10px;
   border: 1px solid #bdc3c7;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-right: 0;
   margin-left: 0;
+}
+.current-images {
+  margin-bottom: 10px;
+  margin-left: 0;
+  margin-right: 0;
+}
+.current-images > .filter-inputs {
+  margin-bottom: 40px;
+  padding-bottom: 0;
+}
+.current-images > .filter-inputs > .current-image {
+  width: 100%;
+  height: 120px;
+  position: relative;
+  display: block;
+}
+.current-images > .filter-inputs > .current-image > img {
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  z-index: 1;
+}
+.current-images > .filter-inputs > .current-image-ref {
+  margin-top: 10px;
+  background-color: #bdc3c7;
+  color: #40485b;
+}
+.current-images > .filter-inputs > .current-image-ref > [class^=col] {
+  padding: 0;
+}
+.current-images > .filter-inputs > .current-image-ref > .filter-name {
+  padding-top: 7px;
+  text-align: center;
+}
+.current-images > .filter-inputs > .current-image-ref input.form-control {
+  border-left: 0;
+  border-right: 0;
+}
+.current-images > .filter-inputs > a.remove-image {
+  border-radius: 0;
+  position: absolute;
+  left: -1px;
+  top: 100%;
+  width: calc(100% + 2px);
+  border: 1px solid #40485b;
 }
