--- a/public/css/panel/form.less
+++ b/public/css/panel/form.less
@@ -68,12 +68,12 @@
 section#filters_area {
   > .card {
     margin-bottom: 10px;
-    >.card-header{
+    > .card-header {
       position: relative;
-      >a.remove-filter{
+      > a.remove-filter {
         position: absolute;
         right: 10px;
-        top:5px;
+        top: 5px;
       }
     }
   }
@@ -88,11 +88,58 @@ section#filters_area {
     margin-bottom: 10px;
   }
 }
-.single-input{
+
+.filter-inputs {
   margin-top: 10px;
   border: 1px solid @color-silver;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-right: 0;
   margin-left: 0;
+}
+
+.current-images {
+  margin-bottom: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  > .filter-inputs {
+    margin-bottom: 40px;
+    padding-bottom: 0;
+    > .current-image {
+      width: 100%;
+      height: 120px;
+      position: relative;
+      display: block;
+      > img {
+        max-width: 100%;
+        max-height: 100%;
+        position: absolute;
+        z-index: 1;
+      }
+    }
+    > .current-image-ref {
+      margin-top: 10px;
+      background-color: @color-silver;
+      color: @color-dark-blue;
+      > [class^=col] {
+        padding: 0;
+      }
+      > .filter-name {
+        padding-top: 7px;
+        text-align: center;
+      }
+      & input.form-control {
+        border-left: 0;
+        border-right: 0;
+      }
+    }
+    > a.remove-image {
+      border-radius: 0;
+      position: absolute;
+      left: -1px;
+      top: 100%;
+      width: calc(100% + 2px);
+      border: 1px solid @color-dark-blue;
+    }
+  }
 }
