--- a/public/css/lib.less
+++ b/public/css/lib.less
@@ -11,6 +11,7 @@
 @color-logo-2: #e1005c;
 @color-yellow: #fff200;
 @color-footer: #232f3e;
+@color-asbestos:#7f8c8d;
 // Fonts
 @font-fontAwesome: 'Font Awesome\ 5 Free';
 @font-Mallanna: 'Mallanna', sans-serif;
