--- a/public/css/main.less
+++ b/public/css/main.less
@@ -168,7 +168,8 @@ a {
   width: 100%;
   height: 600px;
   & .carousel-control-next, & .carousel-control-prev {
-    top: -250px;
+    top: calc(50% - 22vh);
+    bottom: inherit;
   }
   @media @max-767 {
     margin-top: 8vh;
@@ -182,7 +183,7 @@ a {
 }
 
 .insider-container {
-  width:100%;
+  width: 100%;
   background-color: @color-clouds;
   padding-bottom: 50px;
   padding-top: 30px;
@@ -447,18 +448,22 @@ a {
   }
   & .products {
     border: 1px solid @color-silver;
+    height: 100%;
     @media @max-767 {
       background-color: #ffffff;
       margin-bottom: 15px;
     }
     > .product-img {
       .aspect-ration-wrapper(100%, 200px);
+      background-color: #ffffff;
       @media @max-767 {
         height: 250px;
       }
       > img {
         .aspect-ration();
-        height: 100%;
+        max-width: 90%;
+        max-height: 90%;
+        //max-height: 100%;
         @media @max-767 {
           max-width: 100%;
           max-height: 100%;
@@ -560,7 +565,7 @@ a {
   @media @max-767 {
     height: 9vh;
   }
-  > img {
+   img {
     .aspect-ration();
     width: 100%;
     @media @max-767 {
