--- a/public/css/section.less
+++ b/public/css/section.less
@@ -1,5 +1,13 @@
 @import "lib";
 
+.section-banner {
+  .aspect-ration-wrapper(100%, 300px);
+  > img {
+    .aspect-ration();
+    width: 100%;
+  }
+}
+
 .shop-by {
   //width: 100%;
   padding-top: 20px;
@@ -26,13 +34,21 @@
     }
   }
   & .section-category-sm {
-    .aspect-ration-wrapper(100%, 200px);
-    > a {
-      > img {
-        .aspect-ration();
-        width: 100%;
-        min-height: 100%;
-      }
+    width: 100%;
+    height: 100%;
+    background-color: #e67e22;
+    overflow: hidden;
+    img {
+      width: 100%;
+      min-height: 100%;
     }
+    //.aspect-ration-wrapper(100%, auto);
+    //> a {
+    //  > img {
+    //    .aspect-ration();
+    //    width: 100%;
+    //    min-height: 100%;
+    //  }
+    //}
   }
 }
