--- a/public/css/lib.less
+++ b/public/css/lib.less
@@ -12,6 +12,9 @@
 @color-yellow: #fff200;
 @color-footer: #232f3e;
 @color-asbestos:#7f8c8d;
+@color-american-river:#636e72;
+@color-city-light:#dfe4ea;
+@color-electron-blue:#0984e3;
 // Fonts
 @font-fontAwesome: 'Font Awesome\ 5 Free';
 @font-Mallanna: 'Mallanna', sans-serif;
