--- a/public/css/lib.less
+++ b/public/css/lib.less
@@ -10,11 +10,15 @@
 @color-logo-1: #93007b;
 @color-logo-2: #e1005c;
 @color-yellow: #fff200;
+@color-orange: #f39c12;
 @color-footer: #232f3e;
-@color-asbestos:#7f8c8d;
-@color-american-river:#636e72;
-@color-city-light:#dfe4ea;
-@color-electron-blue:#0984e3;
+@color-asbestos: #7f8c8d;
+@color-american-river: #636e72;
+@color-city-light: #dfe4ea;
+@color-electron-blue: #0984e3;
+@color-green: rgba(56, 174, 4, .3);
+@discount-color: @color-green;
+@discount-font-color:rgba(56, 174, 4, 1);
 // Fonts
 @font-fontAwesome: 'Font Awesome\ 5 Free';
 @font-Mallanna: 'Mallanna', sans-serif;
