--- a/public/css/main.less
+++ b/public/css/main.less
@@ -98,8 +98,8 @@ header {
 
 .top-nav {
   background-color: @color-yellow;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 0;
+  padding-bottom: 0;
   font-family: @font-Roboto;
   font-weight: 500;
   font-size: 2.2vmin;
@@ -112,13 +112,19 @@ header {
     }
     > .nav {
       > .nav-item {
+        padding-top: 5px;
         padding-right: 10px;
+        > a {
+          display: block;
+          color: inherit;
+          text-decoration: none;
+        }
       }
     }
   }
   & .search-nav {
     position: relative;
-    padding: 0 0 0 25px;
+    padding: 5px 0 5px 25px;
     @media @max-1220-min-767 {
       flex: 0 0 34%;
       max-width: 34%;
@@ -143,30 +149,92 @@ header {
       max-width: 33%;
     }
     li.nav-item {
-      padding-right: 30px;
-      padding-top: 7px;
+      //padding-right: 30px;
+      //padding-top: 7px;
       position: relative;
-      > .ion-md-arrow-dropdown {
+      display: flex;
+      > a {
+        color: inherit;
+        display: block;
+        position: relative;
+        padding: 1.6vh 15px;
+        text-decoration: none;
+        &.customer-name {
+          font-weight: 400;
+        }
+        > .ion-md-arrow-dropdown {
+          position: absolute;
+          left: calc(100% - 10px);
+          font-size: 3vmin;
+          top: 8px;
+        }
+      }
+      > .drop-down-wrapper {
         position: absolute;
-        left: calc(100% - 25px);
-        font-size: 3.1vmin;
-        top: 2px;
+        background-color: #ffffff;
+        top: 100%;
+        right: 0;
+        padding: 15px 30px;
+        border: 1px solid @color-silver;
+        border-top: none;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
+        display: none;
+        min-width: 100%;
+        &.top-languages {
+          > a {
+            white-space: nowrap;
+            font-family: @font-lato;
+            font-weight: 700;
+            text-transform: capitalize;
+            font-size: 16px;
+            > img {
+              width: 25px;
+              border-radius: 50%;
+              border: 1px solid rgba(0, 0, 0, .3);
+            }
+          }
+        }
+        &.top-sign-in {
+          text-align: center;
+          > a {
+            white-space: nowrap;
+            color: @color-electron-blue;
+            &.btn {
+              color: #ffffff;
+              font-family: @font-lato;
+              font-weight: 700;
+              padding: 5px 50px;
+            }
+          }
+          > span {
+            white-space: nowrap;
+            font-size: 11px;
+          }
+        }
+      }
+      &.active {
+        background-color: #ffffff;
+        > .drop-down-wrapper {
+          display: block;
+        }
       }
     }
     li.shopping-cart {
       position: relative;
       top: -3px;
-      > .cart-badge {
-        display: inline-block;
-        color: #3498db;
-        font-size: 2.9vmin;
-      }
-      > span {
-        font-family: @font-lato;
-        font-size: 1.2vw;
-        &.number {
-          color: #e74c3c;
-          font-weight: 700;
+      > a {
+        > .cart-badge {
+          display: inline-block;
+          color: #3498db;
+          font-size: 2.9vmin;
+        }
+        > span {
+          font-family: @font-lato;
+          font-size: 1.2vw;
+          &.number {
+            color: #e74c3c;
+            font-weight: 700;
+          }
         }
       }
     }
@@ -459,6 +527,10 @@ header {
     color: @color-midnight-blue;
     margin: 0 0 15px 0;
   }
+  & a.product-link {
+    color: inherit;
+    text-decoration: none;
+  }
   & .products {
     border: 1px solid @color-silver;
     height: 100%;
@@ -694,11 +766,11 @@ header {
     font-size: 17px;
     margin: 10px;
   }
-  & .nav-item{
-    >a{
+  & .nav-item {
+    > a {
       display: inline-block;
       padding: 5px;
-      >img{
+      > img {
         border: 1px solid @color-clouds;
         height: 20px;
       }
