--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -313,3 +313,62 @@
   padding-top: 12px;
   padding-bottom: 12px;
 }
+.payment-options {
+  margin-top: 20px;
+  margin-bottom: 25px;
+  font-family: 'Lato', sans-serif;
+}
+.payment-options > h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+}
+.payment-options .payment-options-wrapper {
+  border: 1px solid #ecf0f1;
+  border-bottom: 0;
+}
+.payment-options .payment-options-wrapper > .payment-header {
+  padding: 12px;
+  background-color: #ecf0f1;
+  color: #2c3e50;
+  border-bottom: 1px solid #bdc3c7;
+}
+.payment-options .payment-options-wrapper > .payment-header > span.total {
+  color: #0984e3;
+  font-weight: 700;
+}
+.payment-options .payment-options-wrapper > .payment-method {
+  padding: 15px;
+  position: relative;
+  border-bottom: 1px solid #bdc3c7;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-symbols {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-symbols > img {
+  height: 16px;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-symbols > img.paypal {
+  height: 24px;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-form {
+  border: 1px solid #bdc3c7;
+  padding: 15px;
+  margin: 10px;
+  color: #7f8c8d;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-form .form-control {
+  border-radius: 0;
+  height: 35px;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-form label {
+  margin-bottom: 0;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-form .input-group > .form-control {
+  margin-right: 15px;
+}
+.payment-options .payment-options-wrapper > .payment-method > .credit-form .input-group-addon > img {
+  height: 35px;
+  margin-right: 25px;
+}
