--- a/public/css/checkout.less
+++ b/public/css/checkout.less
@@ -328,6 +328,21 @@
     font-size: 20px;
     padding-top: 12px;
     padding-bottom: 12px;
+    > img {
+      display: none;
+    }
+    &.active {
+      position: relative;
+      > img {
+        position: absolute;
+        z-index: 2;
+        width: 50px;
+        left: 0;
+        top: 0;
+        display: block;
+      }
+
+    }
   }
 }
 
@@ -362,7 +377,7 @@
         right: 15px;
         > img {
           height: 16px;
-          &.paypal{
+          &.paypal {
             height: 24px;
           }
         }
