--- a/public/css/panel/main.less
+++ b/public/css/panel/main.less
@@ -291,3 +291,30 @@ ul.costume-list {
     }
   }
 }
+
+.fields-section {
+  font-family: @font-lato;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid @color-silver;
+  & span.field-name {
+    font-weight: 700;
+  }
+  > h2 {
+    font-weight: 700;
+    font-size: 20px;
+  }
+  > .credit, > .reservation {
+    background-color: rgba(0,0,0,.03);
+    border-radius: 5px;
+    padding: 15px 20px;
+    margin-bottom: 15px;
+  }
+  > .reservation{
+    a{
+      color: @color-carrot;
+      font-family: @font-Mallanna;
+      text-decoration: underline;
+    }
+  }
+}
