--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -386,3 +386,45 @@
   height: 35px;
   margin-right: 25px;
 }
+.success-checkout {
+  width: 90%;
+  margin: 60px auto;
+}
+.success-checkout > h1 {
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+}
+.success-checkout > .checkout-success-details {
+  padding: 0 20px;
+  margin-top: 20px;
+  border: 1px solid #bdc3c7;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-header {
+  border-bottom: 1px solid #bdc3c7;
+  padding: 10px;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-header > h2 {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-body .img-wrapper {
+  overflow: hidden;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-body .img-wrapper > img {
+  width: 100%;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-body .details-wrapper {
+  padding: 80px 20px;
+  font-family: 'Roboto', sans-serif;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-body .details-wrapper > table {
+  width: 100%;
+}
+.success-checkout > .checkout-success-details > .checkout-success-details-body .details-wrapper > table tr td:first-child {
+  padding-right: 20px;
+  font-weight: 700;
+}
